@@ -1,5 +1,9 @@
 2012-08-16
 
+	* src/headerview.c: minor optimization for tooltips.
+
+2012-08-16
+
 	* src/headerview.c: fixed tooltips on windows.
 	  Don't show previous tooltips when cleared.
 
